# PetChain-Contracts

./: .env.example  .gitignore  .tool-versions  ACTIVITY_STREAK_COMPLETION_REPORT.md  ACTIVITY_STREAK_IMPLEMENTATION.md  ACTIVITY_STREAK_INDEX.md  ACTIVITY_STREAK_QUICK_REFERENCE.md  ACTIVITY_STREAK_SUMMARY.md  ACTIVITY_STREAK_VERIFICATION.md  API.md  BEHAVIOR_TRACKING_EXAMPLES.md  BEHAVIOR_TRACKING_IMPLEMENTATION.md  CI_CD_STATUS.md  CODE_CHANGES.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES.md  DELIVERY_SUMMARY.md  DEVELOPMENT.md  ERROR_REGISTRY_IMPLEMENTATION.md  GROOMING_API_REFERENCE.md  GROOMING_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSURANCE_IMPLEMENTATION.md  ISSUES.md  ISSUE_676_COMPLETION_SUMMARY.md  ISSUE_676_DELIVERABLES.md  ISSUE_684_COMPLETION_SUMMARY.md  ISSUE_685_COMPLETION_SUMMARY.md  ISSUE_686_IMPLEMENTATION.md  ISSUE_687_IMPLEMENTATION.md  NEW_CONTRACT_ISSUES.md  NONCE_FIX_SUMMARY.md  NUTRITION_VERSIONING.md  PR_148_CONFLICT_RESOLUTION.md  QUICK_REFERENCE.md  README.md  README_ACTIVITY_STREAK.md  README_ERROR_REGISTRY.md  README_NUTRITION_VERSIONING.md  (+12 more)
backend-2fa/: Cargo.toml  README.md  audit.toml  build.rs  configuration.md  example-integration.rs  quickstart.md  schema.sql  test-output.txt
backend-2fa-implementation/: Cargo.toml  QUICKSTART.md  README.md  example_integration.rs  schema.sql
backend-2fa-implementation/examples/: axum_integration.rs
backend-2fa-implementation/src/: handlers.rs  ip_filter.rs  leaderboard.rs  lib.rs  migrations.rs  rate_limiter.rs  tests.rs  tracing_middleware.rs  trusted_device.rs  two_factor.rs
backend-2fa/examples/: example_integration.rs
backend-2fa/migrations/: 001_create_schema_migrations.down.sql  001_create_schema_migrations.sql  002_create_base_tables.down.sql  002_create_base_tables.sql  002_create_ip_access_list.down.sql  002_create_ip_access_list.sql  003_add_user_two_factor_algorithm.down.sql  003_add_user_two_factor_algorithm.sql  005_encrypt_existing_secrets.sql
backend-2fa/src/: db.rs  error.rs  handlers.rs  health.rs  ip_access.rs  leaderboard.rs  lib.rs  metrics.rs  migrations.rs  rate_limit_middleware.rs  rate_limiter.rs  tests.rs  tracing_middleware.rs  two_factor.rs  webhooks.rs
stellar-contracts/: .gitignore  CHECKLIST.md  COMPREHENSIVE_TEST_DOCUMENTATION.md  Cargo.toml  EVENTS.md  GAS_OPTIMIZATION.md  GROOMING_API.md  GROOMING_COMPLETE.md  GROOMING_IMPLEMENTATION.md  GROOMING_QUICK_REFERENCE.md  INSURANCE_API.md  README.md  TEST_DOCUMENTATION.md  TEST_SUMMARY.md  check_output.txt  check_warnings.txt  do_replace.ps1  expanded.rs  fix_all.ps1  fix_all_warnings.ps1  fix_attr.py  fix_braces.ps1  fix_callers.ps1  fix_clinic_info.py  fix_dead_code.ps1  fix_enc2.ps1  fix_final.ps1  fix_final.py  fix_get_pet.ps1  fix_impl_brace.ps1  fix_meds.py  fix_mod_structure.ps1  fix_other_tests.ps1  fix_placement.ps1  fix_positions.ps1  fix_remnant.ps1  fix_remnant2.ps1  fix_safe_inc.ps1  fix_search.ps1  fix_structure.ps1  (+8 more)
stellar-contracts/.cargo/: config.toml
stellar-contracts/src/: lib.rs  temp_thought.rs  test.rs  test.rs.bak  test_access_control.rs  test_activity.rs  test_activity_idempotency.rs  test_admin_initialization.rs  test_attachments.rs  test_audit_ledger.rs  test_batch.rs  test_batch_read.rs  test_behavior.rs  test_biomarker_trend.rs  test_book_slot.rs  test_breeding.rs  test_breeding_genetics.rs  test_caller_nonce.rs  test_claim_documents.rs  test_co_ownership.rs  test_consent_pagination.rs  test_coownership.rs  test_critical_alerts.rs  test_cross_chain_identity.rs  test_custody_chain.rs  test_dispute_voting.rs  test_disputes.rs  test_emergency_contacts.rs  test_emergency_override.rs  (+37 more)
(+193 files in other folders)
