[package]
name = "petchain-2fa"
version = "0.1.0"
edition = "2021"

[dependencies]
totp-rs = { version = "5.7.1", features = ["qr", "otpauth", "gen_secret"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"

[dev-dependencies]
proptest = "1.5"
