[package]
name = "petchain-2fa"
version = "0.1.0"
edition = "2021"

[dependencies]
totp-rs = { version = "5.7.1", features = ["qr", "otpauth", "gen_secret"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base32 = "0.5.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4" }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
redis = "0.27"
prometheus = { version = "0.13", features = ["process"] }

[[example]]
name = "example_integration"
path = "example-integration.rs"
