[package]
name = "petchain-stellar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"
aes-gcm = { version = "0.10.0", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["custom"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
