[package]
name = "pet_transfer_adoption"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 0
strip = "symbols"
panic = "abort"

[workspace]
